# simba

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
Simba/: README.md  pyproject.toml
Simba/src/: Helper.py  Simba.py  VoltageMonitor.py
Simba/src/Capacitors/: IdealCapacitor.py  TantulumCapacitor.py
Simba/src/Converters/: BQ25570.py  BuckBoost.py  BuckConverter.py  Diode.py  Hysteresis.py  LDO.py
Simba/src/Converters/converter_data/BQ25570/: buckConverterData_vout=1.8.npy  buckConverterData_vout=2.0.npy  buckConverterData_vout=2.2.npy  buckConverterData_vout=2.4.npy  buckConverterData_vout=3.0.npy  buckConverterData_vout=3.3.npy  quiescentData_activeMode.npy  quiescentData_standbyMode.npy
Simba/src/Harvesters/: Artificial.py  IVCurve.py  SolarPanel.py  TEG.py
Simba/src/Harvesters/harvesting_data/IVCurves/: AM1417_lux1000.json  AM1417_lux10000.json  AM1417_lux13000.json  AM1417_lux15000.json  AM1417_lux18000.json  AM1417_lux20000.json  AM1417_lux300.json  AM1417_lux600.json  EXL2-1V50_lux1000.json  EXL2-1V50_lux10000.json  EXL2-1V50_lux20000.json  EXL2-1V50_lux300.json  EXL2-1V50_lux600.json  Gameboy_lux1000.json  Gameboy_lux10000.json  Gameboy_lux13000.json  Gameboy_lux15000.json  Gameboy_lux18000.json  Gameboy_lux20000.json  Gameboy_lux300.json  Gameboy_lux600.json  KXOB25-02-X8F_lux10000.json  KXOB25-02-X8F_lux13000.json  KXOB25-02-X8F_lux15000.json  KXOB25-02-X8F_lux18000.json  KXOB25-02-X8F_lux20000.json
Simba/src/Loads/: AdvancedJITLoad.py  ConstantLoad.py  JITLoad.py  TaskLoad.py
Tools/: Readme.md  (+6 more)
(+317 files in other folders)
