[project]
name = "Simba"
version = "0.0.1"
authors = [
  { name="Omitted", email="Omitted@omitted.com"},
]
description = "Simba simulation framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/simbaframework/simba"